<resources>
    <string name="app_name">First</string>
    <string name="hint">please input data</string>
    <string name="result">result:</string>
    <string name="commit">committ</string>
    <string name="action_settings">setting</string>
    <string name="textview1">team name</string>
    <string name="textview2">0</string>
    <string name="button1">one point</string>
    <string name="button2">two points</string>
    <string name="button3">three points</string>
    <string name="butt2">reset</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_open">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="label_open_list">OpenList</string>
    <string name="label_keyword">please input words</string>
    <string name="label_kresult"> </string>
    <string name="btn_search">Search</string>
</resources>
