<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:gravity="center"
        android:hint="@string/rmb_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:importantForAutofill="no">
    </EditText>
    <TextView
        android:id="@+id/showOut"
        android:textSize="35sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <Button
        android:id="@+id/btn_dollar"
        android:text="@string/btn_dollar_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/btn_euro"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>
    <Button
        android:id="@+id/btn_won"
        android:text="@string/btn_won_label"
        android:onClick="openOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>


</LinearLayout>